# JobNinjaServer2Shared

./: .gitignore  README.md  cloud_watch_client.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pre-release.yml  release.yml
jn_tools/: cloud_watch_client.py
tests/: test_cloud_watch_client.py
